# swagger.json
@@ -263,6 +263,34 @@
         }
       }
     },
+    "/api/v1/advertisement/update": {
+      "put": {
+        "tags": ["advertisement-controller"],
+        "operationId": "update_7",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ReqAdvertisementUpdate"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ResStringMessage"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/admin/update": {
       "put": {
         "tags": ["admin-controller"],
@@ -726,6 +754,34 @@
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/ReqAttributeGroupCreate"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ResStringMessage"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/advertisement/create": {
+      "post": {
+        "tags": ["advertisement-controller"],
+        "operationId": "create_6",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ReqAdvertisementCreate"
               }
             }
           },
@@ -1588,6 +1644,81 @@
         }
       }
     },
+    "/api/v1/advertisement/get/{uuid}": {
+      "get": {
+        "tags": ["advertisement-controller"],
+        "operationId": "getByUuid_7",
+        "parameters": [
+          {
+            "name": "uuid",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ResAdvertisementOne"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/advertisement/get/list": {
+      "get": {
+        "tags": ["advertisement-controller"],
+        "operationId": "getAll_7",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "isActive",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/CustomPageResAdvertisementOne"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/admin/me": {
       "get": {
         "tags": ["admin-controller"],
@@ -1906,6 +2037,35 @@
       "delete": {
         "tags": ["attribute-group-controller"],
         "operationId": "delete_6",
+        "parameters": [
+          {
+            "name": "uuid",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ResStringMessage"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/advertisement/delete/{uuid}": {
+      "delete": {
+        "tags": ["advertisement-controller"],
+        "operationId": "delete_7",
         "parameters": [
           {
             "name": "uuid",
@@ -2251,6 +2411,24 @@
           "orderNumber": {
             "type": "integer",
             "format": "int32"
+          }
+        }
+      },
+      "ReqAdvertisementUpdate": {
+        "type": "object",
+        "properties": {
+          "uuid": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "link": {
+            "type": "string"
+          },
+          "image": {
+            "type": "string"
+          },
+          "isActive": {
+            "type": "boolean"
           }
         }
       },
@@ -2601,6 +2779,20 @@
           "orderNumber": {
             "type": "integer",
             "format": "int32"
+          }
+        }
+      },
+      "ReqAdvertisementCreate": {
+        "type": "object",
+        "properties": {
+          "link": {
+            "type": "string"
+          },
+          "image": {
+            "type": "string"
+          },
+          "isActive": {
+            "type": "boolean"
           }
         }
       },
@@ -3149,6 +3341,38 @@
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/ResAttributeGroupOne"
+            }
+          },
+          "paginationData": {
+            "$ref": "#/components/schemas/PaginationData"
+          }
+        }
+      },
+      "ResAdvertisementOne": {
+        "type": "object",
+        "properties": {
+          "uuid": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "link": {
+            "type": "string"
+          },
+          "image": {
+            "type": "string"
+          },
+          "isActive": {
+            "type": "boolean"
+          }
+        }
+      },
+      "CustomPageResAdvertisementOne": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ResAdvertisementOne"
             }
           },
           "paginationData": {
